# Init

./: Makefile  README.md  app
docs/: usage.md
src/: advanced.c  advanced.h  basic.c  basic.h  main.c
templates/c/: .gitignore  Makefile  README.md
templates/c/include/: common.h
templates/c/src/: main.c
templates/cpp/: CMakeLists.txt
templates/cpp/src/: main.cpp
